recal and accuracy

--- a/glass_clasification/glass.ipynb
+++ b/glass_clasification/glass.ipynb
@@ -3426,8 +3426,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recall is always equal to accuracy in my example. Since we are looking at all the classes together, each prediction error (X is misclassified as Y) is a False Positive for Y, and a False Negative for X. Recall must be equal to accuracy, this is not a coincidence. dodać wzró"
+    "Recall is always equal to accuracy in my example. Since we are looking at all the classes together, each prediction error (X is misclassified as Y) is a False Positive for Y, and a False Negative for X. Recall must be equal to accuracy. \n",
+    "In a multi class model, when each data point can belong to only one class: TP = TN. Then accuracy = 2TP / (P + N)\n",
+    "\n",
+    "P + N is equal to TP + TN + FP + FN and in the case of TP = TN, P + N = 2 TP + FP + FN\n",
+    "\n",
+    "After transformations we get the equation for recall\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
